#18424 Applying code review suggestions